--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>Welcome to hyliuaa.com</h1>
     <p>This domain is now active 🎉</p>
-    <p>More content coming soon.</p>
+    <p>More content coming soon...</p>
     <a href="mailto:youremail@example.com" class="btn">Contact Me</a>
   </div>
 </body>
